se agregó botón y formulario

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <<h1>Título nuevo modificado!</h1>
+
+    <form action="#" method="get">
+      <input type="button" value="enviar">
+
+    </form>
   </body>
 </html>
