--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <<h1>Título nuevo modificado!</h1>
 
     <form action="#" method="get">
+      <input type="text" name="firstName" value="firstName">
       <input type="button" value="enviar">
-
     </form>
   </body>
 </html>
