--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <form action="#" method="get">
       <input type="text" name="firstName" value="firstName">
+      <input type="text" name="lastName" value="lastName">
       <input type="button" value="enviar">
     </form>
   </body>
