--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <form action="#" method="get">
       <input type="text" name="firstName" value="firstName">
       <input type="text" name="lastName" value="lastName">
+      <input type="number" name="age" value="age">
       <input type="button" value="enviar">
     </form>
   </body>
