--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <input type="number" name="firstName" value="firstName">
       <input type="text" name="lastName" value="lastName">
       <input type="number" name="age" value="age">
+      <img src="#" alt="Test Img"/>
       <input type="button" value="enviar">
     </form>
   </body>
