--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <input type="number" name="age" value="age">
       <input type="date" name="birthdate" value="birthdate">
       <img src="#" alt="Test Img"/>
+      <video src="cat.mp4"></video>
       <input type="button" value="enviar">
     </form>
   </body>
